[package]
name = "donetsk"
version = "0.1.0"
authors = ["tsrapnik <yannick-peeters@outlook.com>"]
edition = "2018"

[dependencies]
vulkano = "0.17"
vulkano-shaders = "0.17"
vulkano-win = "0.17"
winit = "0.21"
vulkano_text = "0.12.0"
petgraph = "0.4.13"
rand = "0.7.0"
nalgebra = "0.18"

[dev-dependencies]

[[example]]
name = "ftn_parser"
path = "src/examples/ftn_parser/main.rs"
